[workspace]
resolver = "2"
# members sorted by publishing order to `crates.io`
members = [
  "derive",
  "primitives",
  "core/ics24-host/types",
  "core/ics26-routing/types",
  "core/ics23-commitment/types",
  "core/ics02-client/types",
  "core/ics03-connection/types",
  "core/ics04-channel/types",
  "core/ics25-handler/types",
  "core/ics02-client/context",
  "core/ics24-host",
  "core/ics26-routing",
  "core/ics02-client",
  "core/ics03-connection",
  "core/ics04-channel",
  "core/ics25-handler",
  "core",
  "clients/ics07-tendermint/types",
  "clients/ics07-tendermint",
  "clients/ics08-wasm/types",
  "clients/cw-context",
  "clients/ics07-tendermint/cw-contract",
  "clients",
  "apps/ics20-transfer/types",
  "apps/ics20-transfer",
  "apps/ics721-nft-transfer/types",
  "apps/ics721-nft-transfer",
  "apps",
  "core/ics24-host/cosmos",
  "data-types",
  "ibc",
  "query",
  "testkit",
]
exclude = [
  "ci/cw-check",
  "ci/no-std-check",
]

[workspace.package]
version      = "0.10.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.71.1"
readme       = "README.md"
repository   = "https://github.com/baron-chain/bc-ibc"
authors      = [ "Baron Chain <business@baronchain.org>" ]

[workspace.dependencies]
# external dependencies
base64          = { version = "0.22.1", default-features = false }
borsh           = { version = "1.5.0", default-features = false }
displaydoc      = { version = "0.2", default-features = false }
prost           = { version = "0.12", default-features = false }
derive_more     = { version = "0.99.17", default-features = false, features = [ "from", "into", "display", "try_into" ] }
rstest          = { version = "0.19" }
schemars        = { version = "0.8.15" }
sha2            = { version = "0.10.8", default-features = false }
serde           = { version = "1.0", default-features = false }
serde_json      = { package = "serde-json-wasm", version = "1.0.1", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }

# ibc dependencies
ibc            = { version = "0.52.0", path = "./ibc", default-features = false }
core       = { version = "0.52.0", path = "./core", default-features = false }
clients    = { version = "0.52.0", path = "./clients", default-features = false }
apps       = { version = "0.52.0", path = "./apps", default-features = false }
primitives = { version = "0.52.0", path = "./primitives", default-features = false }
testkit    = { version = "0.52.0", path = "./testkit", default-features = false }

derive = { version = "0.7.0", path = "./derive" }

core-client     = { version = "0.52.0", path = "./core/ics02-client", default-features = false }
core-connection = { version = "0.52.0", path = "./core/ics03-connection", default-features = false }
core-channel    = { version = "0.52.0", path = "./core/ics04-channel", default-features = false }
core-host       = { version = "0.52.0", path = "./core/ics24-host", default-features = false }
core-handler    = { version = "0.52.0", path = "./core/ics25-handler", default-features = false }
core-router     = { version = "0.52.0", path = "./core/ics26-routing", default-features = false }

client-cw            = { version = "0.52.0", path = "./clients/cw-context", default-features = false }
client-tendermint    = { version = "0.52.0", path = "./clients/ics07-tendermint", default-features = false }
client-tendermint-cw = { version = "0.52.0", path = "./clients/ics07-tendermint/cw-contract", default-features = false }

app-transfer     = { version = "0.52.0", path = "./apps/ics20-transfer", default-features = false }
app-nft-transfer = { version = "0.52.0", path = "./apps/ics721-nft-transfer", default-features = false }

core-client-context     = { version = "0.52.0", path = "./core/ics02-client/context", default-features = false }
core-client-types       = { version = "0.52.0", path = "./core/ics02-client/types", default-features = false }
core-channel-types      = { version = "0.52.0", path = "./core/ics04-channel/types", default-features = false }
core-connection-types   = { version = "0.52.0", path = "./core/ics03-connection/types", default-features = false }
core-commitment-types   = { version = "0.52.0", path = "./core/ics23-commitment/types", default-features = false }
core-host-cosmos        = { version = "0.52.0", path = "./core/ics24-host/cosmos", default-features = false }
core-host-types         = { version = "0.52.0", path = "./core/ics24-host/types", default-features = false }
core-handler-types      = { version = "0.52.0", path = "./core/ics25-handler/types", default-features = false }
core-router-types       = { version = "0.52.0", path = "./core/ics26-routing/types", default-features = false }
client-tendermint-types = { version = "0.52.0", path = "./clients/ics07-tendermint/types", default-features = false }
client-wasm-types       = { version = "0.52.0", path = "./clients/ics08-wasm/types", default-features = false }
app-transfer-types      = { version = "0.52.0", path = "./apps/ics20-transfer/types", default-features = false }
app-nft-transfer-types  = { version = "0.52.0", path = "./apps/ics721-nft-transfer/types", default-features = false }

proto = { version = "0.44.0", default-features = false }

# cosmos dependencies
tendermint                       = { version = "0.36.0", default-features = false }
tendermint-light-client          = { version = "0.36.0", default-features = false }
tendermint-light-client-verifier = { version = "0.36.0", default-features = false }
tendermint-proto                 = { version = "0.36.0", default-features = false }
tendermint-rpc                   = { version = "0.36.0", default-features = false }
tendermint-testgen               = { version = "0.36.0", default-features = false }

# cosmwasm dependencies
### Note: Kept at the following version to match the CosmWasm module version
### used by chains supporting the wasm-enabled version of go v7.3
### (This is the min version of `go` that supports `08-wasm` light clients)
cosmwasm-schema = { version = "2.0.2" } 
cosmwasm-std    = { version = "2.0.2" }
cosmwasm-vm     = { version = "2.0.2" }
cw-storage-plus = { version = "2.0.0" }

# parity dependencies
parity-scale-codec = { version = "3.6.5", default-features = false, features = [ "full" ] }
scale-info         = { version = "2.10.0", default-features = false, features = [ "derive" ] }
