[package]
name         = "primitives"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = [ "blockchain", "cosmos", "ibc" ]
readme       = "README.md"

description = """
    Maintained by `rs`, furnishes essential types and traits universally
    utilized in the implementation of diverse IBC modules, encompassing
    core functionalities, clients, and applications.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
# external dependencies
borsh       = { workspace = true, optional = true }
derive_more = { workspace = true }
displaydoc  = { workspace = true }
prost       = { workspace = true }
schemars    = { workspace = true, optional = true }
serde       = { workspace = true, optional = true }
time        = { version = ">=0.3.0, <0.3.37", default-features = false }

# ibc dependencies
proto = { workspace = true }

# cosmos dependencies
tendermint = { workspace = true }

# parity dependencies
parity-scale-codec = { workspace = true, optional = true }
scale-info         = { workspace = true, optional = true }

[features]
default = [ "std" ]
std = [
  "displaydoc/std",
  "prost/std",
  "serde/std",
  "proto/std",
  "tendermint/std",
  "time/std",
]
serde = [
  "dep:serde",
  "proto/serde",
]
schema = [
  "dep:schemars",
  "proto/json-schema",
  "serde",
  "std",
]
borsh = [
  "dep:borsh",
  "proto/borsh",
]
parity-scale-codec = [
  "dep:parity-scale-codec",
  "dep:scale-info",
  "proto/parity-scale-codec",
]
