[package]
name         = "core-router-types"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = [ "blockchain", "cosmos", "ibc", "routing", "types" ]
readme       = "./../../README.md"

description = """
    Maintained by `rs`, encapsulates essential ICS-26 Routing Module data structures and domain types,
    as specified in the Inter-Blockchain Communication (IBC) protocol. Designed for universal applicability
    to facilitate development and integration across diverse enabled projects.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
# external dependencies
borsh           = { workspace = true, optional = true }
derive_more     = { workspace = true }
displaydoc      = { workspace = true }
schemars        = { workspace = true, optional = true }
serde           = { workspace = true, optional = true }
subtle-encoding = { workspace = true }

# ibc dependencies
core-host-types = { workspace = true }
primitives      = { workspace = true }
proto           = { workspace = true }

# cosmos dependencies
tendermint = { workspace = true }

# parity dependencies
parity-scale-codec = { workspace = true, optional = true }
scale-info         = { workspace = true, optional = true }

[features]
default = [ "std" ]
std = [
  "displaydoc/std",
  "serde/std",
  "subtle-encoding/std",
  "primitives/std",
  "core-host-types/std",
  "proto/std",
  "tendermint/std",
]
serde = [
  "dep:serde",
  "primitives/serde",
  "core-host-types/serde",
  "primitives/serde",
  "proto/serde",
]
borsh = [
  "dep:borsh",
  "core-host-types/borsh",
  "primitives/borsh",
  "proto/borsh",
]
schema = [
  "dep:schemars",
  "core-host-types/schema",
  "primitives/schema",
  "proto/json-schema",
  "serde",
  "std",
]
parity-scale-codec = [
  "dep:parity-scale-codec",
  "dep:scale-info",
  "core-host-types/parity-scale-codec",
  "primitives/parity-scale-codec",
  "proto/parity-scale-codec",
]
